@@ -1,3 +1,7 @@
+2008-07-31  Stan Shebs  <stan@codesourcery.com>
+
+	* gdbint.texinfo: Remove FUNCTION_EPILOGUE_SIZE.
+
 2008-07-29  Stan Shebs  <stan@codesourcery.com>
 
 	* gdbint.texinfo: General round of cleanup and minor
