@@ -1,3 +1,7 @@
+2008-07-31  Stan Shebs  <stan@codesourcery.com>
+
+	* coffread.c (coff_symtab_read): Remove FUNCTION_EPILOGUE_SIZE.
+
 2008-07-30  Stan Shebs  <stan@codesourcery.com>
 
 	* objfiles.c (TARGET_KEEP_SECTION): Remove.
